styles.css
/* -- Global styles -- */

:root{
    --theme-color-light: #fff;
    --theme-color-light-alt: #cd6123;
    --theme-color-dark: #eee;
    --theme-color-dark-alt: #000;
    --text-color: #000;
    --text-color-alt: #fff;
    --text-color-alt2: #808a99;
    --border-color-light: #b8c0cc;
    --font-family-h: 'Suez One', serif;
    --font-family-txt: 'Inter', sans-serif;
    --font-size-h-xs: 14px;
    --font-size-h-s: 22px;
    --font-size-h-m: 24px;
    --font-size-h-l: 36px;
    --font-size-s: 18px;
    --font-size-m: ;
    --font-size-l: 20px;
    --line-height: 1.6;
    --line-height-h: 1.2;
    --line-height-xl: 2;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    scroll-margin-top: 4rem;
}

html {
    scroll-behavior: smooth;
  }

  /* --- Layout --- */
  
  .header__nav { 
      position: fixed;
      z-index: 1;
      width: 100%;
      padding: 0;
      border: none;
      box-shadow: none;
      background-color: var(--theme-color-light);
      transition: border 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
    }

    .header__nav.scrolled {
        border: none;
        box-shadow: 0 4px 6px #0000001a;
    }
    
    /* This code alternates background color for sections */
    .section:nth-child(odd) {
        background-color: #eee;
    }
    
    
    .section {
        display: flex;
        flex-direction: column;
        align-items: center;
        background-color: var(--theme-color-light);
    }

    
    .section__services,
    .section__about-us,
    .section__contact-us { 
        
        justify-content: space-between;
    }
    
    .section__services,
    .section__services,
    .section__about-us,
    .gallery {
        padding: 2rem 5rem 0;
    }
    
    .section__home {
        justify-content: space-between;
        padding: 1rem;
    }

    .section__services {
        font-weight: 700;
    }

    .section__contact-us {
        background-color: var(--theme-color-dark);
        text-align: center;
        padding: 2rem 5rem 1rem;
        box-shadow: 0 4px 6px #0000001a;
    }

    .section__about-us {
        background-color: var(--theme-color-light-alt);
        color: var(--text-color-alt);

        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: center;
        padding: 2rem 2rem 0;
    }

    .logo {
        width: 10rem;
    }
    
    .logo--navbar-logo {
        margin: 1rem 1rem .5rem;

    }
    
    .home__image {
        width: 100%;
        height: 100%;
        object-fit: cover;
    }
    
    .main { 
        display: flex;
        flex-direction: column;
        align-items: center;
        max-width: 80%;
        margin-top: 5rem;
        font-weight: 600;
    }

    .gallery {
        padding: 2rem;
    }
    
    .aside {
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;
        width: 100vw;
        margin-top: 5rem;
        padding: 2rem;
        background-color: var(--theme-color-dark-alt);
        color: var(--text-color-alt);
    }
    
    .contact-us__form {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-top: 2rem;

    }
    
    .footer {
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;
        padding: 5rem 5rem 7rem;

        margin-top: auto;
        position: sticky;
        bottom: 0;
        z-index: -1;
    }
    
    /* -- Typography -- */
    
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        text-align: center;
        text-wrap: balance; /* currently limited support */
        font-weight: 400;
        line-height: var(--line-height-h);
    }
    
    h1,
    h2 {
        font-family: var(--font-family-h);
        text-align: center;
    }


    h3,
    h4,
    h5,
    h6 {
        font-family: var(--font-family-txt);
    }
    
    h1 {
        font-size: var(--font-size-h-m);
        margin: 1rem 0 2rem;
    }
    
    h2 {
        font-size: var(--font-size-h-s);
        margin: 1rem;
    }

    h3 {
        font-size: var(--font-size-xs);
    }

    a,
    p,
    label {
        font-family: var(--font-family-txt);
        font-size: var(--font-size-xs);
        line-height: var(--line-height);
    }
    
    ul {
        line-height: var(--line-height-xl);
        font-family: var(--font-family-txt);
        font-size: var(--font-size-xs);
    }

    a {
        color: var(--text-color);
        text-decoration:none;
        font-size: var(--font-size-xs);
        font-weight: 700;
    }
    
    a:hover {
        color: var(--theme-color-light-alt);
    }
    
    a:active {
        color: var(--text-color-alt2);
    }
    
    .a--alt {
        color: var(--text-color-alt);
    }
    
    p { 
        max-width: 60ch;
    }

    label {
        align-self: flex-start;
    }
    
    input, 
    textarea {
        width: 100%;
        max-width: var(--min-width);
        padding: .5em;
        border-radius: 4px;
        border-width: 1px;
        border-color: var(--border-color-light);
        border-style: solid;
        outline: none;
        font-size: var(--font-size-h-s);
    }
    
    textarea {
        height: 7.5rem;
    }
    
    input::placeholder,
    textarea::placeholder {
        font-family: var(--font-family-txt);
        font-size: var(--font-size-h-xs);
    }
    
    input:focus, textarea:focus {
        border-color: var(--text-color-alt2);
    }

    .span--nobreak {
        white-space: nowrap;
    }
    

    /* --- Buttons -- */
    
    .btn {
        
        display: block;
        width: 26ch;
        margin: 2rem;
        padding: .6em 1.25em;
        border-radius: 0;
        border-width: 0;
        border: 2px solid var(--theme-color-light-alt);
        background-color: var(--theme-color-light);
        color: var(--theme-color-light-alt);
        font-size: var(--font-size-s);
        text-decoration: none;
        text-align: center;
}

/* Effet on main cta button to move the icon on hover" */
.btn__icon {
    transition: transform 0.3s ease-in-out;
}

.btn--primary-cta:hover .btn__icon {
    transform: translateX(+7px);
}

.btn--primary-cta {
    position: relative;
}
/* --- */

.btn:hover {
    cursor:pointer;
}
.btn:active {
    color: var(--theme-color-dark-alt);
    border-color: var(--theme-color-dark-alt);
}

.btn--primary-cta:focus .btn__icon,
.btn--primary-cta:active .btn__icon { 
    color: var(--theme-color-dark-alt);
}

.btn--submit-msg {
    width: auto;
    margin: 3rem 2rem 5rem;
}


/* --- Media queries ---- */

@media (min-width: 600px) {

}

@media (min-width: 1250px) {
    #home {
      flex-direction: row-reverse;
      justify-content: space-around;
    }
    
    body {
    font-size: var(--font-size-l);
    }

    h1 {
  font-size: var(--font-size-h-l);
    }

    .header__nav {
        border: none;
        box-shadow: 0 4px 6px #0000001a;
    }

    .main {
        margin-top: 1rem;
        padding: 6rem 5rem 0rem;
        width: 50%;
      }
    
    .section {
        
      }

    .section__home {
        padding: 0;
    }
    
    .btn {
        font-size: var(--font-size-l);
        margin: 3rem;
    }

    .btn--primary-cta {
        p;
    }

    .logo {
        width: 13rem;
    }

    .logo--navbar-logo {
        margin: 1rem 6rem 0rem;
        width: 16rem;
    }

    .home__image {
        margin: 6rem 0 1rem 5rem;
       
}

